Making Modal generic && creating delete profile modal

--- a/src/components/edit-profile-modal/EditProfileModal.css
+++ b/src/components/edit-profile-modal/EditProfileModal.css
@@ -1,66 +1,131 @@
-.edit-profile-modal--container {
-  position: fixed;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.edit-profile-modal--wrapper {
-  border-radius: 10px;
-  background-color: #fefefe;
-  width: 40%;
-  height: 60%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.edit-profile-modal--exit-button {
-  border-radius: 10px 10px 0px 0px;
-  cursor: pointer;
-  background-color: #c2bebe;
-  padding: 10px;
-}
 
 .edit-profile-modal--form {
-  height: 100%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   margin-top: 30px;
-  /* justify-content: center; */
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .edit-profile-modal--form__input {
   display: flex;
-  justify-content: flex-start;
   gap: 20px;
 }
 
 .edit-profile-modal--form__input label {
   min-width: 100px;
+  color: #60779b;
   padding: 10px;
 }
 
 .edit-profile-modal--form__input input {
-  padding: 10px;
-  border-radius: 10px;
+  position: relative;
+  padding: 0px 20px;
+  border-radius: 20px;
+  outline: none;
   border: none;
-  background-color: aliceblue;
+  background-color: #edf2ff;
+  box-shadow: inset 8px 8px 16px #d7dee9, inset 8px 8px 16px #ffffff;
 }
 
-.edit-profile-modal--form button {
+.edit-profile-modal--form__input input:focus {
+  border: 1px solid #00c3ec;
+}
+
+.modal-technology--input {
   cursor: pointer;
-  background-color: rgb(64, 64, 234);
-  color: white;
-  padding: 10px 80px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.modal-technology--input input {
+  outline: none;
+  cursor: pointer;
+  height: 100%;
+}
+
+.modal-technology--input input:focus {
+  border: 1px solid #00c3ec;
+}
+
+.technology-input--arrow-icon {
+  position: absolute;
+  right: 10px;
+}
+
+.technology-input--arrow-icon__active {
+  position: absolute;
+  right: 10px;
+  rotate: calc(180deg);
+}
+
+.technologies-list--container {
+  gap: 10px;
+  padding: 10px 0;
+  cursor: pointer;
+  width: 100%;
+  position: absolute;
+  top: 45px;
+  z-index: 1;
+  background-color: #edf2ff;
   border-radius: 10px;
-  margin-top: 20px;
+  height: 190px;
+  overflow: auto;
+  box-shadow: inset 8px 8px 16px #d7dee9, inset -8px -8px 16px #ffffff;
+}
+
+.technologies-list--container ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.technologies-list--container li {
+  padding: 7px 20px;
+  list-style-type: none;
+  cursor: pointer;
+  color: #60779b;
+}
+
+.technologies-list--container li:hover {
+  background-color: #ccf6ff;
+}
+
+.edit-profile-modal--buttons {
+  padding: 30px 50px 0px 45px;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.modal--buttons__cancel {
+  border: none;
+  background-color: white;
+  color: #60779b;
+  font-size: 16px;
+  padding: 8px 25px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  border-radius: 6px;
+}
+
+.modal--buttons__update {
+  background-color: #00c3ec;
+  color: white;
+  border-radius: 6px;
+  border: none;
+  padding: 8px 25px;
+  letter-spacing: 1px;
+  font-weight: 600;
 }
 
 .edit-profile-modal--form button:hover {
-  background-color: rgb(106, 74, 231);
+  background-color: #edf2ff;
   color: black;
+  cursor: pointer;
 }
