--- a/src/components/profilesList/ProfileList.css
+++ b/src/components/profilesList/ProfileList.css
@@ -1,14 +1,15 @@
 .profiles-list--container {
-  padding: 100px;
+  width: 100%;
+  width: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  gap: 50px;
+  gap: 20px;
 }
 
 .profile-list--profile {
+  max-height: 470px;
+  overflow: auto;
   padding: 15px;
   border-radius: 13px;
   box-shadow: 10px 10px 20px #b4c1d5;
@@ -24,6 +25,16 @@
   display: flex;
   font-size: 18px;
   letter-spacing: 0.5px;
+}
+
+.profiles-list--add-button {
+  display: flex;
+}
+
+.profiles-list--add-button svg {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
 }
 
 .profile li {
