designing the buttons in modal cmp

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -36,14 +36,54 @@
   text-align: center;
 }
 
+.modal-content {
+  /* background-color: red; */
+ text-align: left; 
+  color: #60779B;
+  /* padding: 15px 20px; */
+  margin: 25px 25px;
+}
+
 .modal-buttons {
     display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  padding: 20px 20px;
+  gap: 10px;
 }
 
-.modal-buttons:hover {
-    background-color: #edf2ff;
-  color: black;
+.modal--buttons__Delete {
+  background-color: #E25357;
+  padding: 8px 25px;
+  border-radius: 6px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  color: white;
   cursor: pointer;
+}
+
+.modal--buttons__update {
+  background-color: #00c3ec;
+  color: white;
+  border-radius: 6px;
+  padding: 8px 25px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.modal--buttons__cancel {
+  color: #60779b;
+  font-size: 16px;
+  padding: 8px 25px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.modal--buttons__Delete:hover,
+.modal--buttons__cancel:hover {
+  background-color: #edf2ff;
+  color: black;
 }
