--- a/src/components/edit-profile-modal/EditProfileModal.css
+++ b/src/components/edit-profile-modal/EditProfileModal.css
@@ -1,16 +1,16 @@
 
 .edit-profile-modal--form {
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   align-items: center;
   gap: 10px;
 }
 
 .edit-profile-modal--form__input {
   display: flex;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 .edit-profile-modal--form__input label {
@@ -94,35 +94,17 @@
 }
 
 .edit-profile-modal--buttons {
-  padding: 30px 50px 0px 45px;
+  /* padding: 30px 50px 0px 45px;
   width: 100%;
   height: 15%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  gap: 10px;
+  gap: 10px; */
 }
 
-.modal--buttons__cancel {
-  border: none;
-  background-color: white;
-  color: #60779b;
-  font-size: 16px;
-  padding: 8px 25px;
-  letter-spacing: 1px;
-  font-weight: 700;
-  border-radius: 6px;
-}
 
-.modal--buttons__update {
-  background-color: #00c3ec;
-  color: white;
-  border-radius: 6px;
-  border: none;
-  padding: 8px 25px;
-  letter-spacing: 1px;
-  font-weight: 600;
-}
+
 
 .edit-profile-modal--form button:hover {
   background-color: #edf2ff;
