--- a/src/components/edit-profile-modal/EditProfileModal.css
+++ b/src/components/edit-profile-modal/EditProfileModal.css
@@ -93,18 +93,20 @@
   background-color: #ccf6ff;
 }
 
-.edit-profile-modal--buttons {
-  /* padding: 30px 50px 0px 45px;
-  width: 100%;
-  height: 15%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  gap: 10px; */
+.modal--buttons__update {
+  background-color: #00c3ec;
+  color: white;
+  border-radius: 6px;
+  padding: 8px 25px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-
-
+.modal--buttons__update:hover {
+  background-color: #edf2ff;
+  color: black;
+}
 
 .edit-profile-modal--form button:hover {
   background-color: #edf2ff;
